jenkinslearn/ Custom Install/objects/QAS_CA_Layout__c.object
<CustomObject>
    <fields>
        <fullName>ConfirmVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultTypedownCountry__c</fullName>
        <label>Default Typedown Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTypedownSearchEngine__c</fullName>
        <defaultValue>&quot;Typedown&quot;</defaultValue>
        <label>Default Typedown Search Engine</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotCofirmNoneMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not confirm none matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailAndPhoneValidationType__c</fullName>
        <label>Email And Phone Validation Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LayoutId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Layout Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LayoutName__c</fullName>
        <label>Layout Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectName__c</fullName>
        <label>sObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypedownConfirmVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Typedown Confirm Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypedownInvocationMode__c</fullName>
        <defaultValue>1</defaultValue>
        <description>1 = onFocus, 2 = onClick</description>
        <label>Typedown Invocation Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypedownInvokeCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Typedown Invoke Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Typedown_Confirm_Verified_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Typedown Confirm Verified Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationType__c</fullName>
        <label>Validation Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QAS CorrectAddress layout configuration</label>
    <nameField>
        <label>QAS_CA_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAS CorrectAddress layout configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>